# scisciDB

./: CLAUDE.md  Makefile  README.md  ecosystem.config.cjs  geography.ipynb  getting-started.ipynb  pyproject.toml  schemas.py
.claude/skills/tune-duckdb-workload/: SKILL.md
.claude/skills/tune-duckdb-workload/references/: file_formats.md  interpreting_explain.md  join_and_memory.md  schema_and_indexing.md  vacc.md
docs/: vacc-setup.md
enrich/: add_crossover_fields.py  add_derived_fields.py  create_lookups.py  sync_db.py
examples/: getting-started.py
export/: arxiv_fulltext.py  counts.py
import/: parse.py
input/: download.py
load/: compact_partitions.sh  load.py  oa_works.sh  oa_works_ducklake.sh  oa_works_slurm.sh  sync.py
notebooks/: getting-started.ipynb
scripts/: ducklake_cleanup.sh  view_snapshots.py
src/scisciDB/: payload_utils.py
src/scisciDB/defs/: resources.py
src/scisciDB/defs/checks/: vacc_env.py
src/scisciDB/defs/checks/payloads/: vacc_env.py
src/scisciDB/defs/enrich/: s2_has_abstract.py  s2_has_fulltext.py  s2_oa_topics.py
src/scisciDB/defs/enrich/payloads/: s2_has_abstract.py  s2_has_fulltext.py  s2_oa_topics.py
src/scisciDB/defs/load/: oa_sources.py  oa_works.py  s2_abstracts.py  s2_papers.py  s2orc_v2.py
src/scisciDB/defs/load/payloads/: oa_sources.py  oa_works.py  s2_abstracts.py  s2_papers.py  s2orc_v2.py
src/scisciDB/defs/maintenance/: ducklake_cleanup.py
src/scisciDB/defs/transform/: oa_works_deduped.py  papers_lookup.py
src/scisciDB/defs/transform/payloads/: oa_works_deduped.py  papers_lookup.py
transform/: deduplicate.py
